# ArocCore_ws

./: .gitignore  KICK_PRECISION_RECOMMENDATIONS.txt  README.md  requirements.txt  tree.txt
docs/: CROSSCHECK_REPORT.md  TROUBLESHOOTING_BALANCE.md
src/DynamixelSDK/c++/example/dxl_monitor/: dxl_monitor.cpp
src/DynamixelSDK/c++/example/protocol1.0/bulk_read/: bulk_read.cpp
src/DynamixelSDK/c++/example/protocol1.0/multi_port/: multi_port.cpp
src/DynamixelSDK/c++/example/protocol_combined/: protocol_combined.cpp
src/DynamixelSDK/c++/src/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_fast_bulk_read.cpp  group_handler.cpp  group_sync_write.cpp  port_handler_linux.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/DynamixelSDK/python/: setup.py
src/DynamixelSDK/python/src/dynamixel_sdk/: group_bulk_read.py  group_sync_read.py  group_sync_write.py  port_handler.py
src/DynamixelSDK/python/tests/: protocol_combined.py
src/DynamixelSDK/python/tests/protocol1_0/: bulk_read.py  factory_reset.py  multi_port.py  ping.py  read_write.py  sync_write.py
src/DynamixelSDK/python/tests/protocol2_0/: broadcast_ping.py  bulk_read_write.py  clear_multi_turn.py  factory_reset.py  fast_bulk_read.py  fast_sync_read.py  indirect_address.py  multi_port.py  ping.py  read_write.py  reboot.py  sync_read_write.py
src/DynamixelSDK/ros/dynamixel_sdk_examples/src/: read_write_node.cpp  read_write_node.py
src/ROBOTIS-Framework/robotis_controller/src/robotis_controller/: robotis_controller.cpp
src/ROBOTIS-Framework/robotis_device/src/robotis_device/: dynamixel.cpp  robot.cpp  sensor.cpp
src/ROBOTIS-Math/robotis_math/src/: bezier_curve.cpp  fifth_order_polynomial_trajectory.cpp  minimum_jerk_trajectory.cpp  minimum_jerk_trajectory_with_via_point.cpp  preview_control.cpp  robotis_linear_algebra.cpp  robotis_math_base.cpp  robotis_trajectory_calculator.cpp  simple_trapezoidal_velocity_profile.cpp  step_data_define.cpp
src/ROBOTIS-OP3-Common/op3_description/launch/: op3_display.launch.py
src/ROBOTIS-OP3-Common/op3_description/urdf/: robotis_op3.gz_sim.xacro  robotis_op3.ros2_control.xacro  robotis_op3.urdf.xacro
src/ROBOTIS-OP3-Demo/op3_bringup/launch/: op3_bringup.launch.py  op3_bringup_visualization.launch.py
src/ROBOTIS-OP3-Demo/op3_demo/: CMakeLists.txt  package.xml
src/ROBOTIS-OP3-Demo/op3_demo/config/: joint_config.yaml
src/ROBOTIS-OP3-Demo/op3_demo/include/op3_demo/: action_demo.h  button_test.h  soccer_demo.h  vision_demo.h
src/ROBOTIS-OP3-Demo/op3_demo/launch/: demo.launch.xml  self_test.launch.xml
src/ROBOTIS-OP3-Demo/op3_demo/src/: demo_node.cpp  test_node.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/action/: action_demo.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/soccer/: ball_follower.cpp  ball_tracker.cpp  soccer_demo.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/test/: button_test.cpp  mic_test.cpp
src/ROBOTIS-OP3-Demo/op3_demo/src/vision/: face_tracker.cpp  vision_demo.cpp
src/ROBOTIS-OP3-Demo/op3_read_write_demo/src/: read_write.cpp
src/ROBOTIS-OP3-ETC/usb_cam/config/: params_1.yaml
src/ROBOTIS-OP3-ETC/usb_cam/launch/: camera.launch.py  camera_config.py
src/ROBOTIS-OP3-ETC/usb_cam/scripts/: show_image.py
src/ROBOTIS-OP3-ETC/usb_cam/src/: usb_cam.cpp  usb_cam_node.cpp
src/ROBOTIS-OP3-ETC/usb_cam/test/: gtest_main.cpp  test_pixel_formats.cpp  test_usb_cam_lib.cpp  test_usb_cam_utils.cpp
src/ROBOTIS-OP3/op3_action_module/include/op3_action_module/: action_module.h
src/ROBOTIS-OP3/op3_action_module/src/: action_module.cpp
src/ROBOTIS-OP3/op3_balance_control/src/: op3_balance_control.cpp
src/ROBOTIS-OP3/op3_base_module/src/: base_module.cpp  base_module_state.cpp
src/ROBOTIS-OP3/op3_direct_control_module/src/: direct_control_module.cpp
src/ROBOTIS-OP3/op3_head_control_module/src/: head_control_module.cpp
src/ROBOTIS-OP3/op3_kinematics_dynamics/src/: link_data.cpp  op3_kinematics_dynamics.cpp
src/ROBOTIS-OP3/op3_localization/include/op3_localization/: op3_localization.h
src/ROBOTIS-OP3/op3_localization/src/: main.cpp  op3_localization.cpp
src/ROBOTIS-OP3/op3_manager/launch/: op3_manager.launch.py  op3_simulation.launch.py
src/ROBOTIS-OP3/op3_manager/src/: op3_manager.cpp
src/ROBOTIS-OP3/op3_online_walking_module/config/: BALANCE_TUNING_GUIDE.md  balance_gain.yaml  balance_gain_aggressive.yaml  balance_gain_conservative.yaml
src/ROBOTIS-OP3/op3_online_walking_module/src/: joint_control.cpp  online_walking_module.cpp  op3_kdl.cpp  walking_control.cpp  wholebody_control.cpp
src/ROBOTIS-OP3/op3_tuning_module/src/: tuning_data.cpp  tuning_module.cpp  tuning_module_state.cpp
src/ROBOTIS-OP3/op3_walking_module/src/: op3_walking_module.cpp
src/ROBOTIS-OP3/open_cr_module/src/: open_cr_module.cpp
src/op3_advanced_detector/: package.xml  setup.cfg  setup.py
src/op3_advanced_detector/config/: camera_param.yaml  detector_config.yaml
src/op3_advanced_detector/launch/: advanced_detector.launch.py  ball_detector_from_usb_cam.launch.py
src/op3_advanced_detector/op3_advanced_detector/: op3_advanced_detector.py
src/op3_gazebo/: CMakeLists.txt  README.md  package.xml
src/op3_gazebo/config/: initial_pose.yaml  op3_controllers.yaml
src/op3_gazebo/launch/: op3_gazebo.launch.py  op3_gazebo_headless.launch.py  op3_gazebo_simple.launch.py  op3_world.launch.py
src/op3_gazebo/scripts/: initial_pose.py  set_init_pose.py  spawn_and_init.py
src/op3_gazebo/worlds/: empty.world  op3_empty.world
src/op3_kick_module/: CMakeLists.txt  README.md  package.xml
src/op3_kick_module/config/: kick_config.yaml
src/op3_kick_module/include/op3_kick_module/: kick_controller.h  kick_planner.h  kick_trajectory.h  kick_types.h
src/op3_kick_module/launch/: kick_demo.launch.py  kick_module.launch.py
src/op3_kick_module/src/: kick_controller.cpp  kick_module_node.cpp  kick_planner.cpp  kick_trajectory.cpp
src/op3_yolo_viewer/: package.xml  setup.cfg  setup.py
src/op3_yolo_viewer/op3_yolo_viewer/: __init__.py  yolo_viewer.py
src/op3_yolo_viewer/resource/: op3_yolo_viewer
(+30 files in other folders)
