<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>op3_kick_module</name>
  <version>1.0.0</version>
  <description>
    Adaptive Kick Controller Module for ROBOTIS OP3
    - Trajectory-based kick planning
    - Multiple kick types (short pass, long pass, shoot)
    - IMU-based balance compensation during kick
    - Pre-kick alignment system
  </description>
  <maintainer email="your-email@example.com">AROC26 Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- ROBOTIS Dependencies -->
  <depend>robotis_controller_msgs</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_math</depend>
  <depend>op3_kinematics_dynamics</depend>
  <depend>op3_balance_control</depend>
  <depend>op3_action_module_msgs</depend>
  <depend>op3_walking_module_msgs</depend>

  <!-- Other -->
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
