<?xml version="1.0"?>
<package format="3">
  <name>op3_yolo_viewer</name>
  <version>0.0.1</version>
  <description>Lightweight viewer for OP3 camera and YOLO detection</description>

  <maintainer email="you@example.com">aroc2</maintainer>
  <license>BSD</license>

  <!-- Penting: ini build tool untuk paket Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependensi runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <!-- INI YANG PALING PENTING -->
    <build_type>ament_python</build_type>
  </export>
</package>
